[project]
name = "myst-preview"
version = "0.1.0"
description = "Preview a single Markdown/notebook file rendered with MyST MD — no myst.yml needed."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "myst-preview contributors" }]
keywords = ["myst", "mystmd", "markdown", "preview", "jupyter"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Documentation",
    "Topic :: Text Processing :: Markup :: Markdown",
]

[project.scripts]
myst-preview = "myst_preview.cli:main"

[project.urls]
Repository = "https://github.com/ianhi/myst-preview"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
